--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ ol, ul {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url("/assets/images/halie-west-25xggax4bSA-unsplash.jpg");
+    background-image: url("./assets/images/halie-west-25xggax4bSA-unsplash.jpg");
     height: 100vh;
     width: 25vw;
     overflow: hidden;
